change minus sign

--- a/synchrotron pulse.ipynb
+++ b/synchrotron pulse.ipynb
@@ -149,7 +149,7 @@
     "beta = 0.01\n",
     "A=q*omega/c/R\n",
     "t = np.linspace(-np.pi, np.pi, 256)\n",
-    "E = -A*beta*(beta-np.cos(t))/(1-beta*np.cos(t))**3\n",
+    "E = A*beta*(beta-np.cos(t))/(1-beta*np.cos(t))**3\n",
     "line, = ax.plot(t,E)"
    ]
   },
@@ -411,39 +411,39 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_imgf7f9523ab115409bb45576e121d9a3e9\">\n",
+       "  <img id=\"_anim_img5fc18eddd1ff45f39a49f9154013fd82\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_sliderf7f9523ab115409bb45576e121d9a3e9\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider5fc18eddd1ff45f39a49f9154013fd82\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"animf7f9523ab115409bb45576e121d9a3e9.set_frame(parseInt(this.value));\"></input>\n",
+       "           oninput=\"anim5fc18eddd1ff45f39a49f9154013fd82.set_frame(parseInt(this.value));\"></input>\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.slower()\"><i class=\"fa fa-minus\"></i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.first_frame()\"><i class=\"fa fa-fast-backward\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.slower()\"><i class=\"fa fa-minus\"></i></button>\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.first_frame()\"><i class=\"fa fa-fast-backward\">\n",
        "          </i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.previous_frame()\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.reverse_animation()\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.pause_animation()\"><i class=\"fa fa-pause\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.pause_animation()\"><i class=\"fa fa-pause\">\n",
        "          </i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.play_animation()\"><i class=\"fa fa-play\"></i>\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.play_animation()\"><i class=\"fa fa-play\"></i>\n",
        "          </button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.next_frame()\"><i class=\"fa fa-step-forward\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.next_frame()\"><i class=\"fa fa-step-forward\">\n",
        "          </i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.last_frame()\"><i class=\"fa fa-fast-forward\">\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.last_frame()\"><i class=\"fa fa-fast-forward\">\n",
        "          </i></button>\n",
-       "      <button onclick=\"animf7f9523ab115409bb45576e121d9a3e9.faster()\"><i class=\"fa fa-plus\"></i></button>\n",
+       "      <button onclick=\"anim5fc18eddd1ff45f39a49f9154013fd82.faster()\"><i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form action=\"#n\" name=\"_anim_loop_selectf7f9523ab115409bb45576e121d9a3e9\" class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_f7f9523ab115409bb45576e121d9a3e9\"\n",
+       "    <form action=\"#n\" name=\"_anim_loop_select5fc18eddd1ff45f39a49f9154013fd82\" class=\"anim-state\">\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_5fc18eddd1ff45f39a49f9154013fd82\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_f7f9523ab115409bb45576e121d9a3e9\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_f7f9523ab115409bb45576e121d9a3e9\"\n",
+       "      <label for=\"_anim_radio1_5fc18eddd1ff45f39a49f9154013fd82\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_5fc18eddd1ff45f39a49f9154013fd82\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_f7f9523ab115409bb45576e121d9a3e9\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_f7f9523ab115409bb45576e121d9a3e9\"\n",
+       "      <label for=\"_anim_radio2_5fc18eddd1ff45f39a49f9154013fd82\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_5fc18eddd1ff45f39a49f9154013fd82\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_f7f9523ab115409bb45576e121d9a3e9\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_5fc18eddd1ff45f39a49f9154013fd82\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -453,9 +453,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_imgf7f9523ab115409bb45576e121d9a3e9\";\n",
-       "    var slider_id = \"_anim_sliderf7f9523ab115409bb45576e121d9a3e9\";\n",
-       "    var loop_select_id = \"_anim_loop_selectf7f9523ab115409bb45576e121d9a3e9\";\n",
+       "    var img_id = \"_anim_img5fc18eddd1ff45f39a49f9154013fd82\";\n",
+       "    var slider_id = \"_anim_slider5fc18eddd1ff45f39a49f9154013fd82\";\n",
+       "    var loop_select_id = \"_anim_loop_select5fc18eddd1ff45f39a49f9154013fd82\";\n",
        "    var frames = new Array(85);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAbAAAAEgCAYAAADVKCZpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\\\n",
@@ -14288,7 +14288,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        animf7f9523ab115409bb45576e121d9a3e9 = new Animation(frames, img_id, slider_id, 34.0,\n",
+       "        anim5fc18eddd1ff45f39a49f9154013fd82 = new Animation(frames, img_id, slider_id, 34.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
